--- a/res/layout/activity_send_order.xml
+++ b/res/layout/activity_send_order.xml
@@ -18,7 +18,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="어디로 배달할까요?"
-                android:textAppearance="?android:attr/textAppearanceLarge" />
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textColor="@color/blue" />
 
             <View
                 android:layout_width="0dp"
@@ -62,8 +63,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:inputType="phone" />
+            android:inputType="phone" 
+             android:hint="연락처를 입력하세요. 예)01000000000"/>
 
+        
+        
+        
+        
         <CheckBox
             android:id="@+id/send_cb_sms"
             android:layout_width="wrap_content"
@@ -95,7 +101,40 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_weight="1" />
-            <CheckBox
+        
+   
+   
+   
+    <RadioGroup
+            android:id="@+id/send_rg"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
+  			
+  			<RadioButton
+  			    android:id="@+id/send_rb_cash"
+  			    android:layout_width="wrap_content"
+  			    android:layout_height="wrap_content"
+  			    android:checked="true"
+  			    android:text="현금" />
+  			<RadioButton
+  			    android:id="@+id/send_rb_card"
+  			    android:layout_width="wrap_content"
+  			    android:layout_height="wrap_content"
+  			  
+  			    android:text="카드" />
+  			<RadioButton
+  			    android:id="@+id/send_rb_local_cash"
+  			    android:layout_width="wrap_content"
+  			    android:layout_height="wrap_content"
+  			   
+  			    android:text="지역화폐" />
+  			
+
+
+        </RadioGroup>
+   <!-- 
+   <CheckBox
                 android:id="@+id/send_cb_card"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -111,7 +150,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="지역화폐" />
-
+ -->
         </LinearLayout>
 
         <LinearLayout
