장바구니갱신

--- a/res/layout/activity_cart.xml
+++ b/res/layout/activity_cart.xml
@@ -7,27 +7,32 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:orientation="horizontal" 
         android:layout_weight="10">
 
         <TextView
             android:id="@+id/cart_tv_store_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:text="상호명"
-            android:textAppearance="?android:attr/textAppearanceSmall" />
+            android:layout_weight="7"
+            android:gravity="center"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+   <!-- 
    <View
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1" />
-            
+         -->    
         <Button
             android:id="@+id/cart_btn_insert"
             style="?android:attr/buttonStyleSmall"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/menu_insert" 
+            android:layout_gravity="center"
+            android:layout_weight="3"
             />
 
             
@@ -35,32 +40,48 @@
    
     
     
+      <LinearLayout
+          android:layout_width="match_parent"
+          android:layout_height="0dp"
+          android:layout_weight="70"
+          android:orientation="vertical" >
+
+          <TextView
+              android:id="@+id/textView1"
+              android:layout_width="match_parent"
+              android:layout_height="0dp"
+              android:layout_weight="20"
+              android:gravity="center"
+              android:text="장바구니 목록"
+              android:textAppearance="?android:attr/textAppearanceMedium" />
     
      <ListView
           android:id="@+id/cart_listview"
           android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-            android:layout_weight="60" >
+          android:layout_height="0dp"
+           android:layout_weight="80"  >
       </ListView>
 
+</LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:layout_weight="30"
+          android:layout_height="0dp"
+          android:layout_weight="20"
           android:orientation="vertical" >
 
         <TextView
             android:id="@+id/cart_tv_order_sum"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text=""
+            android:text="합계 :"
               android:layout_gravity="right"
+              android:layout_marginRight="15dp"
             android:textColor="@color/red"
             android:textAppearance="?android:attr/textAppearanceMedium" />
           <Button
             android:id="@+id/cart_btn_order"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:text="@string/title_order" 
             />
 
