--- a/res/layout/cart_list_item.xml
+++ b/res/layout/cart_list_item.xml
@@ -2,8 +2,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    >
+    
+    
+    
+    <LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="horizontal"
-    android:layout_margin="10dp" >
+     android:layout_margin="10dp"
+    >
     
    
 
@@ -11,8 +19,10 @@
                 android:id="@+id/cart_list_tv_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text=""
-                android:textAppearance="?android:attr/textAppearanceMedium" />
+                android:text="11"
+                android:textAppearance="?android:attr/textAppearanceMedium" 
+               
+                android:textStyle="bold"/>
 
             <View
                 android:layout_width="0dp"
@@ -27,7 +37,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text=""
-                android:textAppearance="?android:attr/textAppearanceSmall" />
+                android:textAppearance="?android:attr/textAppearanceMedium" />
 
            
 
@@ -41,14 +51,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text=""
-                android:textAppearance="?android:attr/textAppearanceSmall" />
+                android:textAppearance="?android:attr/textAppearanceMedium" />
              <ImageView
                 android:id="@+id/cart_list_btn_del"
                 
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                
+                android:layout_marginLeft="10dp"
                 android:src="@drawable/select_cart_del"
                 />
-            
+            </LinearLayout>
         </LinearLayout>
