--- a/res/layout/tab_setaddr.xml
+++ b/res/layout/tab_setaddr.xml
@@ -25,49 +25,101 @@
             android:id="@+id/addrtab_tv_loc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="설정된 배송지가 없습니다."
+            android:text=""
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
     </LinearLayout>
-      
-         <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="주소검색" />
 
-         <LinearLayout
+       
+
+             <LinearLayout
+                 android:layout_width="match_parent"
+                 android:layout_height="wrap_content"
+                 android:orientation="vertical"
+                >
+<TextView
+                     android:id="@+id/textView1"
+                     android:layout_width="wrap_content"
+                     android:layout_height="wrap_content"
+                     android:text="주소검색" />
+                 <LinearLayout
+                     android:layout_width="match_parent"
+                     android:layout_height="wrap_content" >
+
+                     <EditText
+                         android:id="@+id/addrtab_ed_add1"
+                         android:layout_width="wrap_content"
+                         android:layout_height="wrap_content"
+                         android:layout_weight="1"
+                         android:ems="10"
+                         android:inputType="textPostalAddress" />
+
+                     <Button
+                         android:id="@+id/addrtab_btn_add1"
+                         style="?android:attr/buttonStyleSmall"
+                         android:layout_width="wrap_content"
+                         android:layout_height="wrap_content"
+                         android:layout_weight="1"
+                         android:text="검색" />
+                 </LinearLayout>
+   
+                 <TextView
+                     android:id="@+id/textView1"
+                     android:layout_width="wrap_content"
+                     android:layout_height="wrap_content"
+                     android:text="읍, 면, 동, 리 명을 입력하고 검색하세요"
+                     android:textColor="@color/red" />
+</LinearLayout>
+              
+  <FrameLayout
              android:layout_width="match_parent"
-             android:layout_height="wrap_content" >
+             android:layout_height="match_parent" >
+                     
+                 <LinearLayout
+                     android:layout_width="match_parent"
+                     android:layout_height="match_parent"
+                      android:id="@+id/addrtab_lay_detailaddr"
+                       android:visibility="visible" >
 
-             <EditText
-                 android:id="@+id/addrtab_ed_add1"
-                 android:layout_width="wrap_content"
-                 android:layout_height="wrap_content"
-                 android:layout_weight="1"
-                 android:ems="10"
-                 android:inputType="textPostalAddress" />
+                     <EditText
+                         android:id="@+id/addrtab_ed_add2"
+                         android:layout_width="wrap_content"
+                         android:layout_height="wrap_content"
+                         android:layout_weight="1"
+                         android:ems="10"
+                         android:hint="세부주소를 입력하세요"
+                         android:inputType="textPostalAddress" >
 
-             <Button
-                 android:id="@+id/addrtab_btn_add1"
-                 style="?android:attr/buttonStyleSmall"
-                 android:layout_width="wrap_content"
-                 android:layout_height="wrap_content"
-                 android:layout_weight="1"
-                 android:text="검색" />
+                         
+                     </EditText>
 
-         </LinearLayout>
-        <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/red"
-        android:text="읍, 면, 동, 리 명을 입력하고 검색하세요" />
+                    
 
-        <ListView
-            android:id="@+id/addrtab_listview"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
-        </ListView>
+                     <Button
+                         android:id="@+id/addrtab_btn_add2"
+                         style="?android:attr/buttonStyleSmall"
+                         android:layout_width="wrap_content"
+                         android:layout_height="wrap_content"
+                         android:layout_weight="1"
+                         android:text="완료" />
+
+                 </LinearLayout>
+
+             <LinearLayout
+                 android:layout_width="match_parent"
+                 android:layout_height="match_parent"
+                 android:orientation="vertical" 
+                 android:id="@+id/addrtab_lay_postsearch"
+                  android:visibility="invisible">
+
+                 <ListView
+                     android:id="@+id/addrtab_listview"
+                     android:layout_width="match_parent"
+                     android:layout_height="wrap_content" >
+                 </ListView>
+
+             </LinearLayout>
+
+         </FrameLayout>
 
 </LinearLayout>
