--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -47,7 +47,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
            android:layout_weight="7"
-           android:gravity="center"
+           android:gravity="center_vertical"
             android:text="@string/addr"
              />
 
