--- a/res/layout/activity_cart.xml
+++ b/res/layout/activity_cart.xml
@@ -13,11 +13,12 @@
 
         <TextView
             android:id="@+id/cart_tv_store_name"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:text="상호명"
-            android:layout_weight="7"
+            android:layout_weight="9"
             android:gravity="center"
+            android:textColor="@color/black"
             android:textAppearance="?android:attr/textAppearanceMedium" />
    <!-- 
    <View
